--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,12 @@
 }
 
 body {
+    background-image: url(images/tartan-background.jpg);
+    background-repeat: repeat-x;
+    background-color: #130000;
+}
+
+body {
 	padding: 20px;
   font-family: "xkcd", sans-serif;
   font-size: 20px;
