--- a/views/form.ejs
+++ b/views/form.ejs
@@ -24,15 +24,7 @@
 			<div id="listCourses">
 				<button id="allCourses" type="button">List All Courses</button>
 			</div>
-			<!-- <form id="f1">
-				<p id="inputArea"><b>New Brigade</b></p>
-				<label for="name">Name</label>
-				<input id="name" type="text" value="" /><br><br>
-				<label for="place">Place</label>
-				<input id="place" type="text" value="" /><br><br>
-				<label for="male">Program Connection</label>
-				<input id="programConnection" type="text" name="programConnection" value="" /><br><br>
-			</form> -->
+
 			<br><br>
 
 			<form id="f2">
@@ -55,13 +47,14 @@
 						</p>
 						<p id = "timeinput">
 						</p>
+			
 					</div>
-
-			<br><br>
 
 			<button id="addToSchedule" type="submit" value="">Add to Schedule</button>
 			<br><br>
-	 		<div id = "output2"></div>
+	 		<div id = "output2">
+
+	 		</div>
 
 
 
